// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescriptionRow should match snapshot 1`] = `
<DocumentFragment>
  .c0 > span {
  -webkit-text-decoration: dotted underline;
  text-decoration: dotted underline;
}

.c0 > span:after {
  content: '';
  display: block;
}

.c1 {
  cursor: pointer;
  color: var(--acx-accents-blue-50);
}

.c1:hover {
  color: var(--acx-accents-blue-60);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:after {
  content: '';
  display: block;
}

<span
    class="c0"
  >
    <span
      class="c1"
    >
      <div
        data-testid="children"
      >
        Children
      </div>
    </span>
  </span>
</DocumentFragment>
`;

exports[`DescriptionRow should match snapshot 2`] = `
<DocumentFragment>
  .c0 > span {
  -webkit-text-decoration: dotted underline;
  text-decoration: dotted underline;
}

.c0 > span:after {
  content: '';
  display: block;
}

<span
    class="c0"
  >
    <span
      class=""
    >
      <div
        data-testid="children"
      >
        Children
      </div>
    </span>
  </span>
</DocumentFragment>
`;

exports[`DescriptionRow should match snapshot 3`] = `
<DocumentFragment>
  <span
    class=""
  >
    children
  </span>
</DocumentFragment>
`;

exports[`DescriptionRow should match snapshot 4`] = `
<DocumentFragment>
  <span
    class=""
  >
    <div
      data-testid="children"
    />
  </span>
</DocumentFragment>
`;

exports[`DescriptionRow should match snapshot 5`] = `
<DocumentFragment>
  .c0 > span {
  -webkit-text-decoration: dotted underline;
  text-decoration: dotted underline;
}

.c0 > span:after {
  content: '';
  display: block;
}

<span
    class="c0"
  >
    <span
      class=""
    >
      <div
        data-testid="children"
      >
        Children
      </div>
    </span>
  </span>
</DocumentFragment>
`;

exports[`DescriptionSection should match snapshot 1`] = `
<DocumentFragment>
  .c1 > span {
  -webkit-text-decoration: dotted underline;
  text-decoration: dotted underline;
}

.c1 > span:after {
  content: '';
  display: block;
}

.c2 {
  cursor: pointer;
  color: var(--acx-accents-blue-50);
}

.c2:hover {
  color: var(--acx-accents-blue-60);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2:after {
  content: '';
  display: block;
}

.c0 .ant-descriptions-row > th {
  padding-bottom: 0;
}

.c0 .ant-descriptions-item .ant-descriptions-item-label,
.c0 .ant-descriptions-item .ant-descriptions-item-content {
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
}

.c0 .ant-descriptions-item .ant-descriptions-item-label {
  color: var(--acx-neutrals-60);
}

.c0 .ant-descriptions-item .ant-descriptions-item-label::after {
  top: unset;
  bottom: 0;
  margin: 0 0.25em 0 0;
}

.c0 .ant-descriptions-item .ant-descriptions-item-content {
  color: var(--acx-primary-black);
}

.c0 .ant-descriptions-item .ant-descriptions-item-content .ant-badge-status-dot {
  top: -1px;
}

<div
    class="ant-descriptions c0"
  >
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  label-0
                </span>
              </div>
            </th>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-content"
                >
                  <span
                    class="c1"
                  >
                    <span
                      class="c2"
                    >
                      <div
                        data-testid="children-0"
                      />
                    </span>
                  </span>
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  label-1
                </span>
              </div>
            </th>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-content"
                >
                  <span
                    class="c1"
                  >
                    <span
                      class="c2"
                    >
                      <div
                        data-testid="children-1"
                      />
                    </span>
                  </span>
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  label-2
                </span>
              </div>
            </th>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-content"
                >
                  <span
                    class="c1"
                  >
                    <span
                      class="c2"
                    >
                      <div
                        data-testid="children-2"
                      />
                    </span>
                  </span>
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DescriptionSection should match snapshot 2`] = `
<DocumentFragment>
  .c1 > span {
  -webkit-text-decoration: dotted underline;
  text-decoration: dotted underline;
}

.c1 > span:after {
  content: '';
  display: block;
}

.c2 {
  cursor: pointer;
  color: var(--acx-accents-blue-50);
}

.c2:hover {
  color: var(--acx-accents-blue-60);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2:after {
  content: '';
  display: block;
}

.c0 .ant-descriptions-row > th {
  padding-bottom: 0;
}

.c0 .ant-descriptions-item .ant-descriptions-item-label,
.c0 .ant-descriptions-item .ant-descriptions-item-content {
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
}

.c0 .ant-descriptions-item .ant-descriptions-item-label {
  color: var(--acx-neutrals-60);
}

.c0 .ant-descriptions-item .ant-descriptions-item-label::after {
  top: unset;
  bottom: 0;
  margin: 0 0.25em 0 0;
}

.c0 .ant-descriptions-item .ant-descriptions-item-content {
  color: var(--acx-primary-black);
}

.c0 .ant-descriptions-item .ant-descriptions-item-content .ant-badge-status-dot {
  top: -1px;
}

<div
    class="ant-descriptions c0"
  >
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  label-0
                </span>
              </div>
            </th>
            <th
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  label-1
                </span>
              </div>
            </th>
            <th
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  label-2
                </span>
              </div>
            </th>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-content"
                >
                  <span
                    class="c1"
                  >
                    <span
                      class="c2"
                    >
                      <div
                        data-testid="children-0"
                      />
                    </span>
                  </span>
                </span>
              </div>
            </td>
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-content"
                >
                  <span
                    class="c1"
                  >
                    <span
                      class="c2"
                    >
                      <div
                        data-testid="children-1"
                      />
                    </span>
                  </span>
                </span>
              </div>
            </td>
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-content"
                >
                  <span
                    class="c1"
                  >
                    <span
                      class="c2"
                    >
                      <div
                        data-testid="children-2"
                      />
                    </span>
                  </span>
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
